// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell children 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock />
  </react-native-mock>
  <react-native-mock>
    <react-native-mock>
      <react-native-mock>
        <react-native-mock>
          标题文字
        </react-native-mock>
        我是Cell
      </react-native-mock>
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Cell description 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock />
  </react-native-mock>
  <react-native-mock>
    <react-native-mock>
      <react-native-mock>
        <react-native-mock>
          标题文字
        </react-native-mock>
      </react-native-mock>
      <react-native-mock>
        描述文字
      </react-native-mock>
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Cell hasArrow 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock />
  </react-native-mock>
  <react-native-mock>
    <react-native-mock>
      <react-native-mock>
        <react-native-mock>
          标题文字
        </react-native-mock>
        我是Cell
      </react-native-mock>
      <react-native-mock>
        描述文字
      </react-native-mock>
      <react-native-mock />
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Cell help 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock />
  </react-native-mock>
  <react-native-mock>
    <react-native-mock>
      <react-native-mock>
        <img
          alt=""
          src="https://zhongantecheng.github.io/zarm/images/state.18e78939.png"
        />
      </react-native-mock>
      <react-native-mock>
        <react-native-mock>
          标题文字
        </react-native-mock>
      </react-native-mock>
      <react-native-mock>
        描述文字
      </react-native-mock>
    </react-native-mock>
    <react-native-mock>
      我是help
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Cell icon 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock />
  </react-native-mock>
  <react-native-mock>
    <react-native-mock>
      <react-native-mock>
        <img
          alt=""
          src="https://zhongantecheng.github.io/zarm/images/state.18e78939.png"
        />
      </react-native-mock>
      <react-native-mock>
        <react-native-mock>
          标题文字
        </react-native-mock>
        我是Cell
      </react-native-mock>
      <react-native-mock>
        描述文字
      </react-native-mock>
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;

exports[`Cell renders correctly 1`] = `
<react-native-mock>
  <react-native-mock>
    <react-native-mock />
  </react-native-mock>
  <react-native-mock>
    <react-native-mock>
      <react-native-mock>
        <react-native-mock>
          标题文字
        </react-native-mock>
      </react-native-mock>
    </react-native-mock>
  </react-native-mock>
</react-native-mock>
`;
